welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: not found: type i
	if (nums[i] == value ) {return i }
                 ^